--- a/style.css
+++ b/style.css
@@ -62,7 +62,8 @@ section {
 
 .user-input p {
     font-size: 1rem;
-    margin: 1.5rem 0 1rem 0;
+    margin: 1rem 0 2rem 0;
+    text-align: center;
 }
 
 .container-btns {
@@ -107,8 +108,50 @@ section {
     box-shadow: 0 0 10px 0 #6d89a95e;
 }
 
+
+/* ======== Keypad =========*/
+
+.calc-keypad, .main-input {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+.calc-keypad button {
+    background: #f1f5fa;
+    border: 1px solid #bebed2;
+    border-radius: 5px;
+    padding: 5px;
+    margin: 5px 5px;
+    font-size: 15px;
+    color: black;
+    max-width: 45px;
+    max-height: 50px;
+}
+
+.calc-keypad button:hover {
+    cursor: pointer;
+    background: #f5f9fb;
+}
+
+
+/* ======= Input fields =======*/
+
+.main-input #inputField {
+    padding: 1rem;
+    min-width: 18rem;
+    min-height: 4rem;
+    margin-top: 1.25rem;
+    font-size: 1.56rem;
+    text-align: center;
+    background: white;
+    border-radius: 0.3rem;
+    box-shadow: 0 0 10px -4px grey;
+    border: 2px solid #a1a1ae;
+}
+
 .second-input {
-    display: grid;
+    display: none;
     margin: 40px 0;
 }
 
